--- a/binder_collection.html
+++ b/binder_collection.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.3.0-BINDER-EDIT-IMPROVEMENTS - Enhanced binder editing modal with improved layout selection, image upload, and mobile responsiveness -->
+<!-- Version: 4.9.0-BINDER-EDIT-IMPROVEMENTS - Enhanced binder editing modal, layout selection, image upload, mobile responsiveness, and event notification. -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
