--- a/card_list.html
+++ b/card_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.5.0-SEARCH-NORMALIZATION - Search functionality improvements with hiragana/katakana normalization -->
+<!-- Version: 4.9.0-SEARCH-NORMALIZATION - Search improvements, normalization, event notification, and mobile support -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="container-top">
       <h2>ホロライブカード一覧
-        <span style="font-size: 12px; color: #999; font-weight: normal;" id="versionDisplay">[v4.1.0-loading...]</span>
+        <span style="font-size: 12px; color: #999; font-weight: normal;" id="versionDisplay">[v4.9.0-SEARCH-NORMALIZATION]</span>
         <button onclick="checkForUpdates()" style="font-size: 10px; margin-left: 5px; padding: 2px 6px; background: #007acc; color: white; border: none; border-radius: 3px; cursor: pointer;">更新確認</button>
       </h2>
 
