--- a/collection_binder.html
+++ b/collection_binder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.6.0-BINDER-SETTINGS - Added comprehensive binder settings with layout management and metadata editing -->
+<!-- Version: 4.9.0-BINDER-SETTINGS - Comprehensive binder settings, layout management, metadata editing, event notification, and mobile improvements -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
