--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.5.0-BINDER-COLLECTION-UPDATE - Binder collection management system with modular structure -->
+<!-- Version: 4.9.0-BINDER-COLLECTION-UPDATE - Binder collection management system, modular structure, event notification, and mobile improvements -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -211,7 +211,7 @@
 <body>
   <div class="container">
     <h1>ホロライブカードゲーム<br>管理ツール
-      <span style="font-size: 0.4em; color: #999; display: block; margin-top: 5px; font-weight: normal;" id="versionDisplay">[v4.2.0-BINDER-COLLECTION-UPDATE]</span>
+      <span style="font-size: 0.4em; color: #999; display: block; margin-top: 5px; font-weight: normal;" id="versionDisplay">[v4.9.0-BINDER-COLLECTION-UPDATE]</span>
     </h1>
 
     <div class="menu-grid">
