--- a/binder_collection.html
+++ b/binder_collection.html
@@ -129,7 +129,7 @@
 
         <div class="form-group">
           <label class="form-label">説明（任意）</label>
-          <textarea id="editBinderDescription" class="form-textarea" placeholder="バインダーの説明を入力（任意）" rows="5" style="min-height: 120px; resize: vertical;"></textarea>
+          <textarea id="editBinderDescription" class="form-input form-textarea" placeholder="バインダーの説明を入力（任意）" rows="5" style="min-height: 120px; resize: vertical;"></textarea>
         </div>
 
         <div class="form-group">
