Add per-page cache delete support: Service Worker and card_list.js now allow deleting only the current page's cache on update check

--- a/card_list.html
+++ b/card_list.html
@@ -31,8 +31,7 @@
 
         <!-- その他のコントロール -->
         <div class="top-controls-row">
-          <button onclick="setViewMode('table')">🧾 表モード</button>
-          <button onclick="setViewMode('compact')">🖼️ 簡易表示</button>
+          <button id="toggleViewModeBtn" onclick="toggleViewMode()">🖼️ 簡易表示</button>
           <button onclick="toggleDarkMode()">🌗</button>
         </div>
       </div>
