--- a/card_list.html
+++ b/card_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.10.0-VERSION-SYNC-UPDATE - Version synchronization, Service Worker optimization, cache management, and mobile improvements -->
+<!-- Version: 4.11.1-DarkMode-Button-Color-Fix - ダークモードボタン配色修正 -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -15,7 +15,7 @@
     <div class="container-top">
       <h2>ホロライブカード一覧<br>
         <!-- お嬢様のためのバージョン表示は改行も優雅に対応いたしますわ -->
-        <span style="font-size: 12px; color: #999; font-weight: normal; display: inline-block; word-break: break-all; line-height: 1.3; margin-top: 2px;" id="versionDisplay">[v4.10.0-camelCase-id-unify]</span>
+        <span style="font-size: 12px; color: #999; font-weight: normal; display: inline-block; word-break: break-all; line-height: 1.3; margin-top: 2px;" id="versionDisplay">[v4.11.1-DarkMode-Button-Color-Fix]</span>
         <button onclick="checkForUpdates()" style="font-size: 10px; margin-left: 5px; margin-top: 2px; padding: 2px 6px; background: #007acc; color: white; border: none; border-radius: 3px; cursor: pointer; display: inline-block;">更新確認</button>
       </h2>
 
