--- a/card_list.html
+++ b/card_list.html
@@ -15,7 +15,7 @@
     <div class="container-top">
       <h2>ホロライブカード一覧<br>
         <!-- お嬢様のためのバージョン表示は改行も優雅に対応いたしますわ -->
-        <span style="font-size: 12px; color: #999; font-weight: normal; display: inline-block; word-break: break-all; line-height: 1.3; margin-top: 2px;" id="versionDisplay">[v4.11.1-DarkMode-Button-Color-Fix]</span>
+        <span style="font-size: 12px; color: #999; font-weight: normal; display: inline-block; word-break: break-all; line-height: 1.3; margin-top: 2px;" id="versionDisplay">[v4.11.2-MobileDarkBG-Fix]</span>
         <button onclick="checkForUpdates()" style="font-size: 10px; margin-left: 5px; margin-top: 2px; padding: 2px 6px; background: #007acc; color: white; border: none; border-radius: 3px; cursor: pointer; display: inline-block;">更新確認</button>
       </h2>
 
