--- a/collection_binder.html
+++ b/collection_binder.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.10.0-VERSION-SYNC-UPDATE - Version synchronization, Service Worker optimization, cache management, and mobile improvements -->
+<!-- Version: 4.6.1-SwipeIndicator-Remove - スワイプインジケーター削除・関連UI整理 (2025-07-29) -->
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="css/collection_binder.css">
 </head>
 <body>
@@ -112,7 +112,7 @@
   <button class="mobile-fab" onclick="toggleMobileMenu()" id="mobileFab">⚙️</button>
 
   <!-- スワイプインジケーター -->
-  <div id="swipeIndicator" class="swipe-indicator">スワイプしました</div>
+  
 
   <!-- 画像拡大表示モーダル -->
   <div id="imageModal" class="modal" style="display: none;">
@@ -159,7 +159,7 @@
   </div>
 
   <!-- スワイプインジケーター -->
-  <div class="swipe-indicator" id="swipeIndicator"></div>
+
 
   <!-- カード選択モーダル -->
   <div class="card-selector-modal" id="cardSelectorModal">
