--- a/deck_builder.html
+++ b/deck_builder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.10.0-VERSION-SYNC-UPDATE - Version synchronization, Service Worker optimization, cache management, and mobile improvements -->
+<!-- Version: 4.11.2-DeckBuilder-UI-Update - デッキ作成ページUI・機能修正 (2025-07-29) -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -22,7 +22,7 @@
         <button onclick="location.href='holoca_skill_page.html'">🗂 カード詳細検索</button>
       </div>
       <h2 class="deck-title">デッキ作成
-        <span style="font-size: 12px; color: #999; font-weight: normal; margin-left: 10px;" id="versionDisplay">[v4.9.0-SEARCH-NORMALIZATION]</span>
+        <span style="font-size: 12px; color: #999; font-weight: normal; margin-left: 10px;" id="versionDisplay">[v4.11.2-DeckBuilder-UI-Update]</span>
         <button onclick="checkForUpdates()" style="font-size: 10px; margin-left: 5px; padding: 2px 6px; background: #007acc; color: white; border: none; border-radius: 3px; cursor: pointer;">更新確認</button>
       </h2>
       <button onclick="toggleDarkMode()">🌗</button>
