🎉 Release v1.0.0 - Initial Release
- Set version to 1.0.0 for initial official release
- Update package.json with proper metadata and v1.0.0
- Update sw-version.js with v1.0.0 configuration
- Update all HTML files version comments to v1.0.0
- Update RELEASE_NOTES.md for v1.0.0
- Initial release of Hololive Official Card Game Collection Manager

Features:
- Card list management with search and filtering
- Binder collection management
- Deck builder functionality
- Dark mode support
- Responsive design
- Data save/load functionality
- Version checking system with update notifications

--- a/card_list.html
+++ b/card_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.11.1-DarkMode-Button-Color-Fix - ダークモードボタン配色修正 -->
+<!-- Version: 1.0.0-Initial-Release - Initial official release of Hololive Card Game Collection Manager -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
