--- a/collection_binder.html
+++ b/collection_binder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.6.1-SwipeIndicator-Remove - スワイプインジケーター削除・関連UI整理 (2025-07-29) -->
+<!-- Version: 1.0.0-Initial-Release - Initial official release of Hololive Card Game Collection Manager -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
