--- a/deck_builder.html
+++ b/deck_builder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.11.2-DeckBuilder-UI-Update - デッキ作成ページUI・機能修正 (2025-07-29) -->
+<!-- Version: 1.0.0-Initial-Release - Initial official release of Hololive Card Game Collection Manager -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
