--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 4.10.0-VERSION-SYNC-UPDATE - Version synchronization, Service Worker optimization, cache management, and mobile improvements -->
+<!-- Version: 1.0.0-Initial-Release - Initial official release of Hololive Card Game Collection Manager -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
