--- a/card_list.html
+++ b/card_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 1.0.0-Initial-Release - Initial official release of Hololive Card Game Collection Manager -->
+<!-- Version: 4.11.3 -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -14,16 +14,16 @@
   <div class="container">
     <div class="container-top">
       <h2>ホロライブカード一覧<br>
-        <!-- お嬢様のためのバージョン表示は改行も優雅に対応いたしますわ -->
-        <span style="font-size: 12px; color: #999; font-weight: normal; display: inline-block; word-break: break-all; line-height: 1.3; margin-top: 2px;" id="versionDisplay">[v4.11.2-MobileDarkBG-Fix]</span>
+        <!-- バージョン表示 -->
+        <span style="font-size: 12px; color: #999; font-weight: normal; display: inline-block; word-break: break-all; line-height: 1.3; margin-top: 2px;" id="versionDisplay">[v4.11.3]</span>
         <button onclick="checkForUpdates()" style="font-size: 10px; margin-left: 5px; margin-top: 2px; padding: 2px 6px; background: #007acc; color: white; border: none; border-radius: 3px; cursor: pointer; display: inline-block;">更新確認</button>
       </h2>
 
         <div class="top-nav">
-          <button onclick="location.href='index.html'">🏠 ホーム</button>
-          <button onclick="location.href='binder_collection.html'">🎴 バインダー</button>
-          <button onclick="location.href='holoca_skill_page.html'">🗂 カード詳細検索</button>
-          <button onclick="location.href='deck_builder.html'">⚔️ デッキ作成</button>
+          <button onclick="navigateToPage('index.html')">🏠 ホーム</button>
+          <button onclick="navigateToPage('binder_collection.html')">🎴 バインダー</button>
+          <button onclick="navigateToPage('holoca_skill_page.html')">🗂 カード詳細検索</button>
+          <button onclick="navigateToPage('deck_builder.html')">⚔️ デッキ作成</button>
         </div>      <div class="top-controls">
         <!-- CSV機能を最上部に移動 -->
         <div class="top-controls-row csv-row">
@@ -34,6 +34,8 @@
         <div class="top-controls-row">
           <button id="toggleViewModeBtn" onclick="toggleViewMode()">🖼️ 簡易表示</button>
           <button onclick="toggleDarkMode()">🌗</button>
+          <!-- モバイル版のみ画像一括DLボタンを表示 -->
+          <button onclick="showImageDownloadDialog()" id="imageBulkDownloadBtn" class="mobile-only">📥 画像一括DL</button>
         </div>
       </div>
 
@@ -181,15 +183,50 @@
       <div style="position:absolute; top:10px; right:20px; color:white; font-size:20px; cursor:pointer; z-index:1001; background:rgba(0,0,0,0.7); border-radius:50%; width:35px; height:35px; display:flex; align-items:center; justify-content:center;" onclick="hideImageModal()" aria-label="閉じる">✕</div>
     </div>
 
+    <!-- 画像一括ダウンロード確認ダイアログ -->
+    <div id="imageDownloadModal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.7); z-index:2000;">
+      <div style="display:flex; align-items:center; justify-content:center; width:100%; height:100%;">
+        <div style="background:white; padding:30px; border-radius:10px; max-width:500px; width:90%; text-align:center; box-shadow:0 4px 20px rgba(0,0,0,0.3);">
+          <h3 style="margin-top:0; color:#333;">📥 画像一括ダウンロード</h3>
+          <div style="margin:20px 0; padding:15px; background:#f5f5f5; border-radius:5px; text-align:left;">
+            <p style="margin:5px 0;"><strong>対象画像数:</strong> <span id="totalImageCount">-</span> 枚</p>
+            <p style="margin:5px 0;"><strong>推定サイズ:</strong> <span id="estimatedSize">計算中...</span></p>
+            <p style="margin:5px 0;"><strong>現在のキャッシュ:</strong> <span id="currentCacheInfo">確認中...</span></p>
+            <p style="margin:5px 0; font-size:0.9em; color:#666;">※ 1枚あたり約150-200KBで計算</p>
+          </div>
+          <div style="margin:15px 0; padding:10px; background:#fff3cd; border:1px solid #ffeaa7; border-radius:5px; font-size:0.9em; color:#856404;">
+            <strong>⚠️ 注意事項</strong><br>
+            • ダウンロードには時間がかかる場合があります<br>
+            • モバイルデータ通信の場合、通信量にご注意ください<br>
+            • ダウンロード中はページを閉じないでください
+          </div>
+          <div id="downloadProgress" style="display:none; margin:15px 0;">
+            <div style="background:#e9ecef; border-radius:10px; height:20px; overflow:hidden;">
+              <div id="progressBar" style="background:#007bff; height:100%; width:0%; transition:width 0.3s;"></div>
+            </div>
+            <p id="progressText" style="margin:10px 0; font-size:0.9em; color:#666; white-space:pre-line;">準備中...</p>
+          </div>
+          <div style="margin-top:20px;">
+            <button onclick="startImageDownload()" id="startDownloadBtn" style="background:#007bff; color:white; border:none; padding:10px 20px; border-radius:5px; cursor:pointer; margin-right:10px; font-size:16px;">📥 ダウンロード開始</button>
+            <button onclick="clearImageCache()" id="clearCacheBtn" style="background:#dc3545; color:white; border:none; padding:10px 20px; border-radius:5px; cursor:pointer; margin-right:10px; font-size:16px;">🗑️ キャッシュ削除</button>
+            <button onclick="hideImageDownloadDialog()" id="cancelDownloadBtn" style="background:#6c757d; color:white; border:none; padding:10px 20px; border-radius:5px; cursor:pointer; font-size:16px;">キャンセル</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 <div style="margin-top: 20px; padding: 20px; background: rgba(0,0,0,0.05); border-top: 1px solid rgba(0,0,0,0.1); text-align: center; font-size: 0.85em; color: #666;">
   <p><strong>権利表記・免責事項</strong></p>
   <p>「ホロライブ」「hololive」は株式会社カバーの商標です。</p>
-  <p>このツールは株式会社カバーとは無関係の非公式ファンメイドツールです。</p>
+  <p>「ホロライブオフィシャルカードゲーム」は株式会社ブシロードの商標です。</p>
+  <p>このツールは株式会社カバー・株式会社ブシロードとは無関係の非公式ファンメイドツールです。</p>
   <p>カードデータの著作権は各権利者に帰属します。</p>
   <p>このツールの使用により生じた損害について、作成者は一切の責任を負いません。</p>
   <p style="margin-top: 10px;">© 2025 ikachan-desuyo - Hololive Card Game Management Tool (非公式)</p>
 </div>
 
   <script src="js/card_list.js"></script>
+  <!-- オフライン状態管理 -->
+  <script src="js/offline-utils.js"></script>
 </body>
 </html>
