--- a/collection_binder.html
+++ b/collection_binder.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 1.0.0-Initial-Release - Initial official release of Hololive Card Game Collection Manager -->
+<!-- Version: 4.11.3 -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,7 +9,9 @@
 <body>
   <div class="header">
     <div class="header-content">
-      <h1>🎴 コレクションバインダー</h1>
+      <h1>🎴 コレクションバインダー
+        <span style="font-size: 12px; color: #999; font-weight: normal; margin-left: 10px;" id="versionDisplay">[v4.11.3]</span>
+      </h1>
       <div class="compact-controls">
         <button class="compact-btn" onclick="toggleTheme()" title="ダークモード切替">🌙</button>
         <button class="compact-btn" onclick="showAutoArrangePanel()" title="自動配置">📋</button>
@@ -209,5 +211,7 @@
   </div>
 
   <script src="js/collection_binder.js"></script>
+  <!-- オフライン状態管理 -->
+  <script src="js/offline-utils.js"></script>
 </body>
 </html>
