--- a/holoca_skill_page.html
+++ b/holoca_skill_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
-<!-- Version: 1.0.0-Initial-Release - Initial official release of Hololive Card Game Collection Manager -->
+<!-- Version: 4.11.3 -->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -17,15 +17,14 @@
     <div class="top-bar">
       <div class="nav-row">
         <div>
-          <button onclick="location.href='index.html'">🏠 ホーム</button>
-          <button onclick="location.href='card_list.html'">🃏 カード一覧</button>
-          <button onclick="location.href='collection_binder.html'">🎴 バインダー</button>
-          <button onclick="location.href='deck_builder.html'">⚔️ デッキ作成</button>
+          <button onclick="navigateToPage('index.html')">🏠 ホーム</button>
+          <button onclick="navigateToPage('card_list.html')">🃏 カード一覧</button>
+          <button onclick="navigateToPage('binder_collection.html')">🎴 バインダー</button>
+          <button onclick="navigateToPage('deck_builder.html')">⚔️ デッキ作成</button>
         </div>
-                <h2 style="margin: 0;">カード詳細検索
-          <span style="font-size: 12px; color: #999; font-weight: normal;" id="versionDisplay">[v4.9.0-SEARCH-NORMALIZATION]</span>
-          <button onclick="checkForUpdates()" style="font-size: 10px; margin-left: 5px; padding: 2px 6px; background: #007acc; color: white; border: none; border-radius: 3px; cursor: pointer;">更新確認</button>
-        </h2>
+                        <h1>ホロカスキル検索
+          <span style="font-size: 12px; color: #999; font-weight: normal;" id="versionDisplay">[v4.11.3]</span>
+        </h1>
         <button onclick="toggleDarkMode()" style="padding: 2px 6px; font-size: 14px; min-width: auto; width: 28px; height: 28px;">🌗</button>
       </div>
       <div class="nav-row">
@@ -115,13 +114,12 @@
         object-fit:contain;">
     </div>
 
-    <div id="offline-status" style="position: fixed; bottom: 10px; right: 10px; font-size: 12px; padding: 5px 10px; border-radius: 5px; background: rgba(255,255,255,0.9);"></div>
-
 
 <div style="margin-top: 20px; padding: 20px; background: rgba(0,0,0,0.05); border-top: 1px solid rgba(0,0,0,0.1); text-align: center; font-size: 0.85em; color: #666;">
   <p><strong>権利表記・免責事項</strong></p>
   <p>「ホロライブ」「hololive」は株式会社カバーの商標です。</p>
-  <p>このツールは株式会社カバーとは無関係の非公式ファンメイドツールです。</p>
+  <p>「ホロライブオフィシャルカードゲーム」は株式会社ブシロードの商標です。</p>
+  <p>このツールは株式会社カバー・株式会社ブシロードとは無関係の非公式ファンメイドツールです。</p>
   <p>カードデータの著作権は各権利者に帰属します。</p>
   <p>このツールの使用により生じた損害について、作成者は一切の責任を負いません。</p>
   <p style="margin-top: 10px;">© 2025 ikachan-desuyo - Hololive Card Game Management Tool (非公式)</p>
@@ -129,5 +127,7 @@
 
 
     <script src="js/holoca_skill_page.js"></script>
+    <!-- オフライン状態管理 -->
+    <script src="js/offline-utils.js"></script>
 </body>
 </html>
